// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`askFollowupQuestion should return the correct response 1`] = `
{
  "message": 
"<ask_followup_question_answer question="Test question">
Test response
</ask_followup_question_answer>"
,
  "type": "Reply",
}
`;

exports[`askFollowupQuestion should handle errors 1`] = `[Error: Test error]`;

exports[`askFollowupQuestion should handle multiple questions 1`] = `
{
  "message": 
"<ask_followup_question_answer question="First question?">
Answer1|Answer2
</ask_followup_question_answer>
<ask_followup_question_answer question="Second question?">
Answer1|Answer2
</ask_followup_question_answer>"
,
  "type": "Reply",
}
`;

exports[`askFollowupQuestion should handle questions without options 1`] = `
{
  "message": 
"<ask_followup_question_answer question="Open-ended question">
Free text answer
</ask_followup_question_answer>"
,
  "type": "Reply",
}
`;

exports[`askFollowupQuestion should handle empty options array 1`] = `
{
  "message": 
"<ask_followup_question_answer question="Question with empty options">
Fallback answer
</ask_followup_question_answer>"
,
  "type": "Reply",
}
`;

exports[`askFollowupQuestion should validate required parameters 1`] = `[Error: Missing required argument: questions]`;

exports[`askFollowupQuestion should validate required parameters 2`] = `[Error: Missing required argument: prompt]`;
